Group: -     Basic Groups layout -     Kartoffel (Strong groups):       -     Basic layout       -     getAll and create methods
