# openapi.yaml
@@ -118,6 +118,41 @@ paths:
           description: "Invalid ID supplied"
         404:
           description: "User not found"
+  /kartoffel:
+    post:
+      tags:
+      - "kartoffel"
+      summary: "Create a new strong group"
+      description: "This could be done with permissions only"
+      operationId: "createKartoffel"
+      produces:
+      - "application/json"
+      parameters:
+      - in: "body"
+        name: "body"
+        description: "Created strong group object"
+        required: true
+        schema:
+          $ref: "#/definitions/Kartoffel"
+      responses:
+        200:
+          description: "successful operation"
+        405:
+          description: "Invalid Input"
+  /kartoffel/getAll:
+    get:
+      tags: 
+      - "kartoffel"
+      summary: "Get all the Strong Groups "
+      description: ""
+      operationId: "getAllKartoffeln"
+      produces:
+      - "application/json"
+      responses:
+        200:
+          description: "successful operation"
+          schema:
+            $ref: "#/definitions/Kartoffel"
 # securityDefinitions:
 #   petstore_auth:
 #     type: "oauth2"
@@ -131,6 +166,37 @@ paths:
 #     name: "api_key"
 #     in: "header"
 definitions:
+  Kartoffel:
+    type: "object"
+    required:
+    - "name"
+    properties:
+      _id:
+        type: "string"
+        example: "59a56d577bedba18504298df"
+      name:
+        type: "string"
+        example: "Koktamovim"
+      admins:
+        type: "array"
+        example: []
+      members:
+        type: "array"
+        example: []
+      children:
+        type: "array"
+        example: []
+      clearance:
+        type: "number"
+        example: 0
+      ancestors:
+        type: "array"
+        example: []
+      type:
+        type: "string"
+        example: "Team"
+    xml:
+      name: "Kartoffel"
   User:
     type: "object"
     required:
